// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly (app uninstallable) 1`] = `
<ConfirmDialog
  actions={
    <React.Fragment>
      <DefaultButton
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        disabled={false}
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </React.Fragment>
  }
  content={
    <React.Fragment>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
    </React.Fragment>
  }
  onClose={[MockFunction]}
  open={true}
  size="small"
  title="Uninstall this application"
/>
`;

exports[`UninstallModal component should handle correctly error from props 1`] = `
<ConfirmDialog
  actions={
    <React.Fragment>
      <DefaultButton
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        disabled={false}
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </React.Fragment>
  }
  content={
    <React.Fragment>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
      <ForwardRef(WithStyles)
        color="error"
        paragraph={true}
        variant="body1"
      >
        Something went wrong when uninstalling this application. Reason: This is a test error
      </ForwardRef(WithStyles)>
    </React.Fragment>
  }
  onClose={[MockFunction]}
  open={true}
  size="small"
  title="Uninstall this application"
/>
`;

exports[`UninstallModal component should handle correctly linked app error 1`] = `
<ConfirmDialog
  actions={
    <React.Fragment>
      <DefaultButton
        label="Cancel"
        onClick={[MockFunction]}
        theme="secondary"
      />
      <DefaultButton
        disabled={true}
        icon={[Function]}
        label="Uninstall"
        onClick={[Function]}
        theme="danger"
      />
    </React.Fragment>
  }
  content={
    <React.Fragment>
      <ReactMarkdownWrapper
        source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
      />
      <ForwardRef(WithStyles)
        color="error"
        paragraph={true}
        variant="body1"
      >
        A mobile application is linked to this application, it must be revoked to uninstall this application. To do this, you can go on
         
        <a
          className="u-c-pointer u-dodgerBlue"
          onClick={[Function]}
        >
          your page for managing connected devices
        </a>
        .
      </ForwardRef(WithStyles)>
    </React.Fragment>
  }
  onClose={[MockFunction]}
  open={true}
  size="small"
  title="Uninstall this application"
/>
`;
